Fix page overflowing

--- a/src/Messenger.css
+++ b/src/Messenger.css
@@ -1,7 +1,7 @@
 .MessengerContainer {
   display: flex;
   margin: 0 auto;
-  width: var(--page-width);
+  max-width: var(--page-width);
   min-height: calc(100vh - 50px);
 }
 
